# knn_predictor

./: Cargo.toml  Makefile  README.md  generatedata.job  generatedata_incorrect.job  generatedata_mock.job  knn_chiba.job  knn_mock.job  knn_sub.job  knn_test.job  test.job
src/: datagenerator.rs  knn.rs  knn_fitting.rs  lib.rs  plot.R  sampreprocess.rs  utils.rs
