[package]
name = "knn_predictor"
version = "0.1.0"
authors = ["ban-m <ban-m@g.ecc.u-tokyo.ac.jp>"]

[dependencies]
dtw = {path = "../dtw"}
squiggler = {path = "../squiggler"}
csv = "1.0.0-beta.4"
rand = "*"
rayon = "*"

[[bin]]
name = "datagenerator"
path = "./src/datagenerator.rs"

[[bin]]
name = "sampreprocess"
path = "./src/sampreprocess.rs"

[[bin]]
name = "knn"
path = "./src/knn_fitting.rs"